--- a/assets/css/core/theme-vars.css
+++ b/assets/css/core/theme-vars.css
@@ -1,3 +1,6 @@
+/* Using the Catppuccin Mocha Theme */
+/* https://catppuccin.com/palette/ */
+
 :root {
     --gap: 24px;
     --content-gap: 20px;
