--- a/layouts/partials/home_info.html
+++ b/layouts/partials/home_info.html
@@ -5,7 +5,7 @@
         <a style="color:#aaa">I'm an Architect turned software developer who lives in a
             Bus.</a>
         <a style="color:#666">I mostly spend my time writing <a href="https://www.rhino3d.com/"
-                style="color:#fff">Rhino</a></a><a style="color:#666"> with my friends.</a>
+                style="color:#888">Rhino</a></a><a style="color:#666"> with my friends.</a>
         <a style="color:#333">I also travel lots, read, take photos and cook stuff.</a>
     </header>
     <img src="/images/me.jpg" style="margin-top:20px" />
