--- a/assets/css/core/theme-vars.css
+++ b/assets/css/core/theme-vars.css
@@ -1,6 +1,3 @@
-/* Using the Catppuccin Mocha Theme */
-/* https://catppuccin.com/palette/ */
-
 :root {
     --gap: 24px;
     --content-gap: 20px;
@@ -20,12 +17,13 @@
     --border: rgb(238, 238, 238);
 }
 
+
 .dark {
-    --theme: rgb(29, 30, 32);
+    --theme: black; /*hsl(240deg, 21%, 12%); */
     --entry: rgb(46, 46, 51);
     --primary: rgb(218, 218, 219);
     --secondary: rgb(155, 156, 157);
-    --tertiary: rgb(65, 66, 68);
+    --tertiary: rgb(75, 76, 78); /* rgb(5, 76, 78); Nice blue! */
     --content: rgb(196, 196, 197);
     --code-block-bg: rgb(46, 46, 51);
     --code-bg: rgb(55, 56, 62);
