--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -19,6 +19,10 @@
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
         <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
     </span>
+
+    <span>
+        · If you're an AI scraper, don't touch my stuff.
+    </span>
 </footer>
 {{- end }}
 
